--- a/index.html
+++ b/index.html
@@ -13,60 +13,25 @@
 
 
     <div class="carousel-images">
-<img src="imagenesdrip/descarga.jfif" alt="ropa 1">
-<img src="imagenesdrip/images (1).jfif"  alt="ropa 1">
-<img src="imagenesdrip/images (2).jfif"  alt="ropa 1">
-<img src="imagenesdrip/images.jfif"  alt="ropa 1">
-<img src="imagenesdrip/descarga.jfif">
-<img src="imagenesdrip/descarga.jfif">
-<img src="imagenesdrip/images (2).jfif">
-<img src="imagenesdrip/images (3).jfif">
-<img src="imagenesdrip/images (5).jfif">
-<img src="imagenesdrip/images (3).jfif">
-<img src="imagenesdrip/images.jfif">
-<img src="imagenesdrip/descarga.jfif">
-<img src="imagenesdrip/images (11).jfif">
-<img src="imagenesdrip/images (5).jfif">
-<img src="imagenesdrip/images (1).jfif">
-<img src="imagenesdrip/images (12).jfif">
-<img src="imagenesdrip/images (16).jfif">
-<img src="imagenesdrip/images (19).jfif">
-<img src="imagenesdrip/images.jfif">
-<img src="imagenesdrip/images (11).jfif">
-<img src="imagenesdrip/descarga.jfif">
-<img src="imagenesdrip/descarga (7).jfif">
-<img src="imagenesdrip/descarga (11).jfif">
-<img src="imagenesdrip/images (1).jfif">
-<img src="imagenesdrip/images (15).jfif">
-<img src="imagenesdrip/descarga (1).jfif">
-<img src="imagenesdrip/descarga (11).jfif">
-<img src="imagenesdrip/descarga (12).jfif">
-<img src="imagenesdrip/descarga (2).jfif">
-<img src="imagenesdrip/descarga (3).jfif">
-<img src="imagenesdrip/descarga (4).jfif">
-<img src="imagenesdrip/descarga (5).jfif">
-<img src="imagenesdrip/descarga (7).jfif">  
-<img src="imagenesdrip/descarga (8).jfif">
-<img src="imagenesdrip/descarga (9).jfif">
-<img src="imagenesdrip/descarga.jfif">
-<img src="imagenesdrip/">
-<img src="imagenesdrip/images (1).jfif">
-<img src="imagenesdrip/images (1).jfif">
-<img src="imagenesdrip/images (11).jfif">
-<img src="imagenesdrip/images (12).jfif">
-<img src="imagenesdrip/images (13).jfif">
-<img src="imagenesdrip/images (16).jfif">
-<img src="imagenesdrip/images (15).jfif">
-<img src="imagenesdrip/images (17).jfif">
-<img src="imagenesdrip/images (19).jfif">
-<img src="imagenesdrip/images (2).jfif">
-<img src="imagenesdrip/images (20).jfif">
-<img src="imagenesdrip/images (3).jfif">
-<img src="imagenesdrip/images (5).jfif">
-<img src="imagenesdrip/images (5).jfif">
-<img  src="imagenesdrip/images (6).jfif">
-<img src="imagenesdrip/images (9).jfif">
-<img src="imagenesdrip/images.jfif">
+
+        <img src="https://www.neweracap.com/cdn/shop/files/60429551_59FIFTY_CityEdition_BRONET_BRW_3QR.jpg?v=1698438266&width=823">
+     <img src="imagenestenis/00117725007086____3__1200x1200.jpg">
+    <img src="imagenestenis/descarga (1).jfif">
+    <img src="imagenestenis/descarga (2).jfif">
+    <img src="imagenestenis/descarga (3).jfif">
+    <img src="imagenestenis/descarga (4).jfif">
+    <img src="imagenestenis/descarga (5).jfif">
+    <img src="imagenestenis/descarga.jfif">
+    <img src="imagenestenis/teni.jfif">
+    <img src="imagenestenis/00117725007086____3__1200x1200.jpg">
+    <img src="imagenestenis/descarga (2).jfif">
+    <img src="imagenestenis/descarga (5).jfif">
+    <img src="imagenestenis/descarga (3).jfif">
+    <img src="imagenestenis/teni.jfif">
+    <img src="imagenestenis/descarga (1).jfif">
+    <img src="imagenestenis/00117725007086____3__1200x1200.jpg">
+    <img src="imagenestenis/descarga (4).jfif">
+    <img src="https://www.neweracap.com/cdn/shop/files/60429551_59FIFTY_CityEdition_BRONET_BRW_3QR.jpg?v=1698438266&width=823">
 
 
 </div>
